--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
       content="Effective solutions for your business with our experienced team and innovative strategies."
     />
     <title>Web Studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -96,11 +99,11 @@
             <p>Product Designer</p>
           </li>
           <li class="team-member">
-            <img 
-              src="./images/tom-ford.jpg" 
-              alt="Tom Ford" 
-              width="264" 
-              height="260" 
+            <img
+              src="./images/tom-ford.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -110,7 +113,7 @@
               src="./images/camila-garcia.jpg"
               alt="Camila Garcia"
               width="264"
-              height="260" 
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -120,7 +123,7 @@
               src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
-              height="260" 
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -132,48 +135,79 @@
         <h2>Our portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <img src="./images/img-5.jpg" alt="Banking app" width="360" height="300" />
+            <img
+              src="./images/img-5.jpg"
+              alt="Banking app"
+              width="360"
+              height="300"
+            />
             <div class="description">
               <h3>Banking App</h3>
               <p>App</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/img-4.jpg" alt="Cashless Payment" width="360" height="300" />
+            <img
+              src="./images/img-4.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
             <div class="description">
               <h3>Cashless Payment</h3>
               <p>Marketing</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/img-3.jpg" alt="Meditation App" width="360" height="300" />
+            <img
+              src="./images/img-3.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
             <div class="description">
               <h3>Meditation App</h3>
               <p>App</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/img-2.jpg" alt="Taxi Service" width="360" height="300" />
+            <img
+              src="./images/img-2.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
             <div class="description">
               <h3>Taxi Service</h3>
               <p>Marketing</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/img-1.jpg" alt="Screen Illustrations" width="360" height="300" />
+            <img
+              src="./images/img-1.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
             <div class="description">
               <h3>Screen Illustrations</h3>
               <p>Design</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/img-0.jpg" alt="Online Courses" width="360" height="300" />
+            <img
+              src="./images/img-0.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
             <div class="description">
               <h3>Online Courses</h3>
               <p>Marketing</p>
             </div>
           </li>
         </ul>
+      </section>
     </main>
 
     <footer>
