--- a/index.html
+++ b/index.html
@@ -26,20 +26,24 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul class="navigation">
-          <li><a class="medium-text" href="#studio">Studio</a></li>
-          <li><a class="medium-text" href="#portfolio">Portfolio</a></li>
-          <li><a class="medium-text" href="#contacts">Contacts</a></li>
+          <li><a class="medium-text" href="./index.html">Studio</a></li>
+          <li><a class="medium-text" href="">Portfolio</a></li>
+          <li><a class="medium-text" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="addresses">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -47,37 +51,37 @@
 
     <main>
       <section id="hero" class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="hero-header">Effective Solutions for Your Business</h1>
+        <button class="button primary" type="button">Order Service</button>
       </section>
 
       <section id="features" class="features">
-        <h2>Our features</h2>
+        <h2 class="section-header">Our features</h2>
         <ul class="features-list">
           <li class="feature-item">
             <h3>Strategy</h3>
-            <p>
+            <p class="feature-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="feature-item">
             <h3>Punctuality</h3>
-            <p>
+            <p class="feature-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="feature-item">
             <h3>Diligence</h3>
-            <p>
+            <p class="feature-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="feature-item">
             <h3>Technologies</h3>
-            <p>
+            <p class="feature-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -86,7 +90,7 @@
       </section>
 
       <section id="team" class="team">
-        <h2>Our Team</h2>
+        <h2 class="section-header">Our Team</h2>
         <ul class="team-members">
           <li class="team-member">
             <img
@@ -95,8 +99,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member-name">Mark Guerrero</h3>
+            <p class="team-member-role">Product Designer</p>
           </li>
           <li class="team-member">
             <img
@@ -105,8 +109,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member-name">Tom Ford</h3>
+            <p class="team-member-role">Frontend Developer</p>
           </li>
           <li class="team-member">
             <img
@@ -115,8 +119,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-member-name">Camila Garcia</h3>
+            <p class="team-member-role">Marketing</p>
           </li>
           <li class="team-member">
             <img
@@ -125,14 +129,14 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member-name">Daniel Wilson</h3>
+            <p class="team-member-role">UI Designer</p>
           </li>
         </ul>
       </section>
 
       <section id="portfolio" class="portfolio">
-        <h2>Our portfolio</h2>
+        <h2 class="section-header">Our portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
@@ -141,10 +145,8 @@
               width="360"
               height="300"
             />
-            <div class="description">
-              <h3>Banking App</h3>
-              <p>App</p>
-            </div>
+            <h3 class="portfolio-item-name">Banking App</h3>
+            <p class="portfolio-item-desc">App</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -153,10 +155,8 @@
               width="360"
               height="300"
             />
-            <div class="description">
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
-            </div>
+            <h3 class="portfolio-item-name">Cashless Payment</h3>
+            <p class="portfolio-item-desc">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -165,10 +165,8 @@
               width="360"
               height="300"
             />
-            <div class="description">
-              <h3>Meditation App</h3>
-              <p>App</p>
-            </div>
+            <h3 class="portfolio-item-name">Meditation App</h3>
+            <p class="portfolio-item-desc">App</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -177,10 +175,8 @@
               width="360"
               height="300"
             />
-            <div class="description">
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
-            </div>
+            <h3 class="portfolio-item-name">Taxi Service</h3>
+            <p class="portfolio-item-desc">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -189,10 +185,8 @@
               width="360"
               height="300"
             />
-            <div class="description">
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
-            </div>
+            <h3 class="portfolio-item-name">Screen Illustrations</h3>
+            <p class="portfolio-item-desc">Design</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -201,17 +195,15 @@
               width="360"
               height="300"
             />
-            <div class="description">
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
-            </div>
+            <h3 class="portfolio-item-name">Online Courses</h3>
+            <p class="portfolio-item-desc">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+    <footer class="footer">
+      <a href="./index.html" class="logo">Web<span>Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
