--- a/index.html
+++ b/index.html
@@ -59,28 +59,28 @@
         <h2 class="section-header">Our features</h2>
         <ul class="features-list">
           <li class="feature-item">
-            <h3>Strategy</h3>
+            <h3 class="feature-name">Strategy</h3>
             <p class="feature-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="feature-item">
-            <h3>Punctuality</h3>
+            <h3 class="feature-name">Punctuality</h3>
             <p class="feature-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="feature-item">
-            <h3>Diligence</h3>
+            <h3 class="feature-name">Diligence</h3>
             <p class="feature-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="feature-item">
-            <h3>Technologies</h3>
+            <h3 class="feature-name">Technologies</h3>
             <p class="feature-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -203,8 +203,10 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span>Studio</span></a>
-      <p>
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-tail">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
